Fixed tabs overflowing 1px

--- a/src/scripts/OSFramework/Pattern/Tabs/scss/_tabs.scss
+++ b/src/scripts/OSFramework/Pattern/Tabs/scss/_tabs.scss
@@ -210,6 +210,7 @@
 
 		&-item {
 			height: 100%;
+			max-width: 99.99%; /* prevent render issues on chrome, in some scree-sizes, due to overflow hidden and css snap */
 			overflow-y: auto;
 			padding: var(--space-m) var(--space-none);
 			scroll-snap-align: start;
